--- a/text/src/App.css
+++ b/text/src/App.css
@@ -1,23 +1,30 @@
 body {
-    font-family: verdana,Helvetica,Arial,sans-serif;
+    font-family: "Microsoft JhengHei", 微軟正黑體, arial, sans-serif;
+    width: 750px;
+    margin: 0 auto;
+}
+
+h1 {
+    color: rgb(238, 129, 42);
+}
+
+.main {
+    padding: 5em 1em;
+    width: 750px;
+    box-shadow: 0 0 10px silver;
+}
+
+.content {
+    position: relative;
+    font-size: 16px;
+    margin: 1em 0;
+}
+
+.withSide {
+    width: 630px;
+}
+
+.time {
     font-size: 13px;
-}
-
-.header {
-    padding-left: 25px;
-}
-
-.parallelBlock {
-    display: flex;
-    margin: 5px 0;
-    font-size: 15px;
-}
-
-.author {
-    margin-left: 8px;
-    width: 20em;
-    text-decoration: underline;
-    color: #369;
-    cursor: hand;
-    cursor: pointer;
+    color: #AAA;
 }
