--- a/text/src/Ad.css
+++ b/text/src/Ad.css
@@ -32,9 +32,14 @@
 }
 
 .sidebar {
-    padding: 5em 5px;
+    padding: 8em 5px;
     float: right;
     height: 100%;
-    width: 120px;
+    width: 180px;
     min-height: 300px;
+    margin: 0 5px;
+}
+
+img {
+    width: inherit;
 }
